Saved configurations in .npy format and as .csv

--- a/Ising-MonteCarlo.ipynb
+++ b/Ising-MonteCarlo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "75b703b1",
+   "id": "4938b2ca",
    "metadata": {},
    "source": [
     "# Ising model simulation: Classical Monte Carlo"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "a50836a1",
+   "id": "b24cdb3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "812cdb6f",
+   "id": "3c548fdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "1b4714af",
+   "id": "e82806e3",
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "17f4d129",
+   "id": "6a6d3db2",
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "0ad02533",
+   "id": "50ba4d81",
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "65c2b2c0",
+   "id": "34a683e7",
    "metadata": {},
    "outputs": [
     {
@@ -1865,8 +1865,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 138,
+   "id": "e7304d72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('.\\\\data\\\\binned_configurations_array_v0.npy', binned_configurations_array)\n",
+    "np.savetxt('.\\\\data\\\\binned_configurations_array_v0.csv', binned_configurations_array, delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ade57029",
+   "id": "f8068082",
    "metadata": {},
    "outputs": [],
    "source": []
