Updated summary text

--- a/Ising-PyTorch-NN.ipynb
+++ b/Ising-PyTorch-NN.ipynb
@@ -1,9 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e22d798d",
+   "metadata": {},
+   "source": [
+    "# Ising-PyTorch-NN\n",
+    "\n",
+    "Here we will train a neural network in PyTorch to classify the snapshot configurations saved during our previous Monte Carlo simulations. We will use the exactly known $T_c$ for the Ising model to assign labels $y=1$ to the ordered phase $(T<T_c)$ and $y=0$ to the ordered phase $(T>T_c)$. Since each snapshot is labelled by temperature, this becomes a binary classification task."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7282aba8",
+   "id": "3c7b633e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +25,21 @@
     "import torch\n",
     "import torchvision\n",
     "import torch.nn as nn\n",
-    "from torch.utils.data import DataLoader, TensorDataset\n",
-    "from torchvision import transforms\n",
-    "image_path = './'\n",
-    "transform = transforms.Compose([transforms.ToTensor()])"
+    "from torch.utils.data import DataLoader, TensorDataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd0fe72d",
+   "metadata": {},
+   "source": [
+    "## Load data and display snapshots:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6cd14246",
+   "id": "235c6f39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e3a7c44f",
+   "id": "dc6acc65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "08cd07f8",
+   "id": "b49d254f",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "72ce07a6",
+   "id": "d4d9ad88",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5813e774",
+   "id": "1c2d78f2",
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +117,8 @@
     }
    ],
    "source": [
+    "# Display some example snapshots at different temperatures:\n",
+    "\n",
     "fig, axs = plt.subplots(2, 4, figsize=(12, 7))\n",
     "index = 0\n",
     "\n",
@@ -119,9 +136,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7ef68a0",
+   "metadata": {},
+   "source": [
+    "## Test/train split and prepare DataLoaders:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f1a672b2",
+   "id": "720eacce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "be18ded5",
+   "id": "13910c77",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ae42c838",
+   "id": "325ab2d6",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2582bf6c",
+   "id": "a8ab4889",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2b3acf9e",
+   "id": "98fbfeb5",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ecf0b995",
+   "id": "34df5840",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "944993f3",
+   "id": "5b75bc66",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "22ecb4f9",
+   "id": "a3476f75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d4419497",
+   "id": "c5b62137",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6373e313",
+   "id": "219718bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,9 +346,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "633ae952",
+   "metadata": {},
+   "source": [
+    "Each batch contains 32 configurations, each with 144 Ising spin variables. Each configuration has a corresponding label $y$ which is either $1$ or $0$ depending on whether the configuration is for $T<T_c$ or $T\\geq T_c$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b43d119d",
+   "id": "bc103781",
    "metadata": {},
    "outputs": [
     {
@@ -350,9 +383,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8acb61da",
+   "metadata": {},
+   "source": [
+    "## Training initial neural network:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fae2c3b4",
+   "metadata": {},
+   "source": [
+    "Let's use nn.Sequential to build an initial NN with two hidden layers. To start with let's choose the number of hidden units in these two layers to be $32$ and $10$. These layers shall have ReLU activation followed by dropout, where we set $p=0.5$ for now. Later we will experiment with tuning both the number of hidden units and dropout probability $p$. Finally, since this is a binary classification task, we have a single unit output with sigmoid activation yielding $0 \\leq \\hat{y} \\leq 1$, i.e. the probability of class label $y=1$. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "18f7b860",
+   "id": "9cb531ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "da080926",
+   "id": "c73afa10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "609b6736",
+   "id": "fef28436",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c7d9bc11",
+   "id": "4168d4d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "39050e90",
+   "id": "db5566c3",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1f071a66",
+   "id": "9b53244e",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5affcdff",
+   "id": "a07b4625",
    "metadata": {},
    "outputs": [
     {
@@ -558,9 +607,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6eedd643",
+   "metadata": {},
+   "source": [
+    "Our initial model achieves an accuracy of $96.22\\%$ on our test dataset. Below we will explore tuning the values of the dropout probability $p$, weight_decay (i.e. L2 penalty), and the number of units in our hidden layers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f02878db",
+   "metadata": {},
+   "source": [
+    "## Hyperparameter tuning:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b8c44220",
+   "id": "24e6e4ca",
    "metadata": {},
    "outputs": [
     {
@@ -3527,7 +3592,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "c3ee0ab6",
+   "id": "928ae38f",
    "metadata": {},
    "outputs": [
     {
@@ -3571,7 +3636,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "8bfd6ec0",
+   "id": "2c159e00",
    "metadata": {},
    "outputs": [
     {
@@ -3611,9 +3676,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45f1d1c9",
+   "metadata": {},
+   "source": [
+    "Choosing a sufficiently large value of weight_decay is a variance reduction technique which closes the gap between training and validation loss. Let's try setting weight_decay = 0.01 as it looks like this will generalize well to unseen test data. Let us also select $p=0.2$ and units = $(64, 32)$ as this achieved the highest accuracy on our validation set. Now we can train a final model with these tuned hyperparameters:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "cd8ac85c",
+   "id": "cdd0adb0",
    "metadata": {},
    "outputs": [
     {
@@ -3688,9 +3761,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9c65584",
+   "metadata": {},
+   "source": [
+    "Our final model achieves an accuracy of $96.58\\%$ on the test set! In the next notebook, we shall see if we can do better by training a convolutional neural network (CNN) in PyTorch."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccb2db8a",
+   "id": "6fc2f8db",
    "metadata": {},
    "outputs": [],
    "source": []
