Updated Monte Carlo notes

--- a/Ising-MonteCarlo.ipynb
+++ b/Ising-MonteCarlo.ipynb
@@ -9,6 +9,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b28f10d",
+   "metadata": {},
+   "source": [
+    "The Ising model is a paradigmatic lattice model of magnetic behavior. We shall study a square lattice (with periodic boundary conditions) with $N = L \\times L$ sites, with an Ising spin $S=\\pm 1$ situated on each site. Considering nearest-neighbor interactions only, the total energy is given by:\n",
+    "\n",
+    "$ E = J \\sum_{\\langle i, j \\rangle} S_i S_j $,\n",
+    "\n",
+    "where the sum is over all pairs of neighboring sites. Here $J$ is the Ising coupling, where $J=+1$ corresponds to an antiferromagnetic interaction, while $J=-1$ is a ferromagnetic coupling. In this notebook we will study the antiferromagnetic case, and study the transition from a totally disordered high temperature regime to an alternating checkerboard pattern at low temperatures. \n",
+    "\n",
+    "If a spin at site $(x, y)$ is flipped, the change in total energy $\\Delta E$ etween this new configuration and the old configuration is:\n",
+    "\n",
+    "$ J( [S^{new}_{x,y} S_{x+1, y} + S^{new}_{x,y}S_{x-1, y} + S^{new}_{x,y}S_{x,y+1} + S^{new}_{x,y}S_{x,y-1}] - [S^{old}_{x,y} S_{x+1, y} + S^{old}_{x,y}S_{x-1, y} + S^{old}_{x,y}S_{x,y+1} + S^{old}_{x,y}S_{x,y-1}]) $.\n",
+    "\n",
+    "That is:\n",
+    "\n",
+    "$\\Delta E = J (S^{new}_{x,y} - S^{old}_{x,y}) [S_{x+1, y} + S_{x-1, y} + S_{x,y+1} + S_{x,y-1}]$.\n",
+    "\n",
+    "Now, the spin we choose to flip is either $S^{old}_{x,y}=1$ or $S^{old}_{x, y}=-1$. \n",
+    "\n",
+    "If $S^{old}_{x,y} = 1$, then the proposed update has $S^{new}_{xy} = -1$, and so $S^{new}_{x,y} - S^{old}_{x,y} = -2$. However if $S^{old}_{x,y} = -1$, then the proposed update has $S^{new}_{xy} = 1$, and so $S^{new}_{x,y} - S^{old}_{x,y} = 2$. Hence in either case, we can express the change in energy as:\n",
+    "\n",
+    "$ \\Delta E = -2J(S^{old}_{x,y}) [S_{x+1, y} + S_{x-1, y} + S_{x,y+1} + S_{x,y-1}] $.\n",
+    "\n",
+    "For any configuration of spins $m$ with corresponding energy $E_m$, the probability of the state is given by $P_m = \\frac{1}{Z} e^{-\\beta E_m}$, where $Z = \\sum_m e^{-\\beta E_m}$ is the partition function. Our Monte Carlo method will propose random flips to individuals spins in the lattice, and either accept or reject the update according to the Metropolis-Hastings criterion. That is, for each Monte Carlo step, we propose flipping a spin i.e. updating the configuration $m$ to a new configuration $n$. We accept this move if $E_n \\leq E_m$, otherwise we accept with probability $e^{(-\\beta \\Delta E)}$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "id": "b24cdb3a",
