Updated intro notes

--- a/Ising-ML-scikit-learn.ipynb
+++ b/Ising-ML-scikit-learn.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3418d061",
+   "metadata": {},
+   "source": [
+    "In this notebook, we will apply some classification algorithms to our Monte Carlo data. First we will load the binned configurations we saved during our Monte Carlo measurement sweeps. Since the Ising model transition temerature is exactly known, $T_c \\approx 2.269$, we can label each configuration as belonging to either the ordered or disordered regime. We can then apply binary classification techniques, such as K-Nearest Neighbors, Support Vector Classifier, and various tree-based methods to learn to classify unseen spin configurations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "eeee61ae",
