Updated NN intro notes

--- a/Ising-PyTorch-NN.ipynb
+++ b/Ising-PyTorch-NN.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Ising-PyTorch-NN\n",
     "\n",
-    "Here we will train a neural network in PyTorch to classify the snapshot configurations saved during our previous Monte Carlo simulations. We will use the exactly known $T_c$ for the Ising model to assign labels $y=1$ to the ordered phase $(T<T_c)$ and $y=0$ to the ordered phase $(T>T_c)$. Since each snapshot is labelled by temperature, this becomes a binary classification task."
+    "Here we will train a neural network in PyTorch to classify the snapshot configurations saved during our previous Monte Carlo simulations. We will use the exactly known $T_c$ for the Ising model to assign labels $y=1$ to the ordered phase $(T<T_c)$ and $y=0$ to the ordered phase $(T>T_c)$. Since each snapshot is labelled by temperature, this becomes a binary classification task.\n",
+    "\n",
+    "Below we will implement a basic neural network in PyTorch, then we will proceed to tuning the values of hyperparameters such as weight decay (L2 penalty in Adam optimizer), dropout probability, and the number of units in our hidden layers."
    ]
   },
   {
