Updated summary text

--- a/Ising-PyTorch-CNN.ipynb
+++ b/Ising-PyTorch-CNN.ipynb
@@ -9,12 +9,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d991e576",
+   "cell_type": "markdown",
+   "id": "5716f3a9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In our previous notebooks, <b>Ising-ML-scikit-learn.ipynb</b> and <b>Ising-PyTorch-NN.ipynb</b>, we implemented a variety of ML algorithms and a regular NN to perform the binary classification task. Here, we will feed our snapshots of the lattice directly to a convolutional neural network (CNN). First we will train an initial baseline CNN before tuning hyperparameters such as weight decay (L2 penalty in Adam optimizer), dropout probability, and the number of units in our hidden layers. \n",
+    "\n",
+    "We shall see that our CNN performs best out of all the methods we have explored in this project, achieving an accuracy of $97.4\\%$ on our test set."
+   ]
   },
   {
    "cell_type": "code",
@@ -32,6 +34,14 @@
     "import torchvision\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader, TensorDataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d15c16b",
+   "metadata": {},
+   "source": [
+    "## Load data and display snapshots:"
    ]
   },
   {
@@ -128,6 +138,14 @@
     "        axs[i, j].set_title(f'Temperature: {T[index*500]}')\n",
     "\n",
     "        index += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70d6a074",
+   "metadata": {},
+   "source": [
+    "## Test/train split and prepare DataLoaders:"
    ]
   },
   {
@@ -240,6 +258,24 @@
    ],
    "source": [
     "next(iter(test_dl))[0].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d14f1dbb",
+   "metadata": {},
+   "source": [
+    "## Training initial CNN:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5162fc7b",
+   "metadata": {},
+   "source": [
+    "Let's use nn.Sequential to build an initial NN with two convolutional layers, one hidden layer, and an output layer. To start with, for our two convolution layers, let us choose the number of filters as $32$ and $64$. These layers shall have ReLU activation followed by Max Pooling, where the kernel size is chosen such that the image height and width is halved at this step. After the convolutions are performed, the final output is flattened and passed to a linear layer with ReLU activation followed by dropout with probability $p$. For now let us choose this linear layer to have $16$ units. Later we will experiment with tuning the number of units, filters, and dropout probability to achieve optimal performance. Finally, since this is a binary classification task, we have a single unit output with sigmoid activation yielding $0 \\leq \\hat{y} \\leq 1$, i.e. the probability of class label $y=1$. \n",
+    "\n",
+    "Note that for each Conv2d layer we use 'same' padding so that the output height $H$ and width $W$ is unchanged from the input height and width. Our snapshot images have only $1$ channel, and initially have $H=W=12$ since we simulated $12\\times12$ square lattices. However, after two Max Pooling operations our images are reduced to $H=W=3$. Since we choose $64$ filters in our second Conv2d layer here, the output of our final Max Pooling has dimensions of $(64, 64, 3, 3)$ in $[N, C, H, W]$ format (note the first dimension is our batch size, which also happens to be $64$). Hence after using nn.Flatten, the number of input features passed to nn.Linear is $64 \\times 3 \\times 3 = 576$."
    ]
   },
   {
@@ -457,6 +493,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30615590",
+   "metadata": {},
+   "source": [
+    "Our initial model achieves an accuracy of $97.07\\%$ on our test dataset. Below we will explore tuning the values of the dropout probability $p$, weight_decay (i.e. L2 penalty), and the number of filters and hidden units in our network. First we can take a look at the samples our classified got wrong:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "870af7cf",
+   "metadata": {},
+   "source": [
+    "## Studying misclassifications:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "1760c080",
@@ -513,6 +565,24 @@
     "    if my_pred != int(my_y):\n",
     "\n",
     "        print(f'Test set i = {i}:    T = {round(my_T, 2)},  y = {int(my_y)},  Prediction = {my_pred==int(my_y)}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68ba3148",
+   "metadata": {},
+   "source": [
+    "For small lattices, a very sharp transition at $T_c \\approx 2.269$ will not be observed, hence configurations slightly above and below $T_c$ will look similar. As expected, most misclassified samples come from this temperature range $2.1 \\leq T \\leq 2.4$, as shown above. Our classifier correctly classifies all test samples with $2.5 \\leq T \\leq 5$ as belonging to the disordered regime, and all samples with $1.0 \\leq T \\leq 1.9$ as belonging to the ordered phase.\n",
+    "\n",
+    "Let's now see if we can improve performance by tuning the dropout probability $p$, the value of weight decay (L2 penalty), and the number of filters used in the 2 Conv2d layers along with the number of units in the linear layer which follows. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bb24390",
+   "metadata": {},
+   "source": [
+    "## Hyperparameter tuning:"
    ]
   },
   {
@@ -2099,6 +2169,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9bca0c5a",
+   "metadata": {},
+   "source": [
+    "For our final model, let's use the hyperparameters which gave the best accuracy on our validation set as shown above. That is: $32$ filters for first Conv2d layer, $64$ filters for second Conv2d layer, $64$ units in hidden layer, $p=0.1$ dropout probability, and weight decay set to $0.001$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "a2c11afb",
@@ -2205,9 +2283,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b289772",
+   "metadata": {},
+   "source": [
+    "Our final model achieves an accuracy of $97.4\\%$ on the test set, which is the best out of all the methods we have explored in this project! Here we see the benefit of using convolutional neural network for image classification tasks, and their ability to capture patterns from input images."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dee360d2",
+   "id": "61f92105",
    "metadata": {},
    "outputs": [],
    "source": []
