--- a/Ising-PyTorch-NN.ipynb
+++ b/Ising-PyTorch-NN.ipynb
@@ -397,7 +397,7 @@
    "id": "fae2c3b4",
    "metadata": {},
    "source": [
-    "Let's use nn.Sequential to build an initial NN with two hidden layers. To start with let's choose the number of hidden units in these two layers to be $32$ and $10$. These layers shall have ReLU activation followed by dropout, where we set $p=0.5$ for now. Later we will experiment with tuning both the number of hidden units and dropout probability $p$. Finally, since this is a binary classification task, we have a single unit output with sigmoid activation yielding $0 \\leq \\hat{y} \\leq 1$, i.e. the probability of class label $y=1$. "
+    "Let's use <b>nn.Sequential</b> to build an initial NN with two hidden layers. To start with let's choose the number of hidden units in these two layers to be $32$ and $10$. These layers shall have ReLU activation followed by dropout, where we set $p=0.5$ for now. Later we will experiment with tuning both the number of hidden units and dropout probability $p$. Finally, since this is a binary classification task, we have a single unit output with sigmoid activation yielding $0 \\leq \\hat{y} \\leq 1$, i.e. the probability of class label $y=1$. "
    ]
   },
   {
