Updated intro text and Readme

--- a/Ising-PyTorch-CNN.ipynb
+++ b/Ising-PyTorch-CNN.ipynb
@@ -10,10 +10,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5716f3a9",
+   "id": "ae1c6dcd",
    "metadata": {},
    "source": [
-    "In our previous notebooks, <b>Ising-ML-scikit-learn.ipynb</b> and <b>Ising-PyTorch-NN.ipynb</b>, we implemented a variety of ML algorithms and a regular NN to perform the binary classification task. Here, we will feed our snapshots of the lattice directly to a convolutional neural network (CNN). First we will train an initial baseline CNN before tuning hyperparameters such as weight decay (L2 penalty in Adam optimizer), dropout probability, and the number of units in our hidden layers. \n",
+    "In our previous notebooks, <b>Ising-ML-scikit-learn.ipynb</b> and <b>Ising-PyTorch-NN.ipynb</b>, we implemented a variety of ML algorithms and a regular NN to perform the binary classification task. Here, we will feed our snapshots of the lattice directly to a convolutional neural network (CNN). First we will train an initial baseline CNN before tuning hyperparameters such as weight decay (L2 penalty in Adam optimizer), dropout probability, the number of convolutional filters used, and number of units in our hidden layer. \n",
     "\n",
     "We shall see that our CNN performs best out of all the methods we have explored in this project, achieving an accuracy of $97.4\\%$ on our test set."
    ]
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d15c16b",
+   "id": "bba50bfc",
    "metadata": {},
    "source": [
     "## Load data and display snapshots:"
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70d6a074",
+   "id": "eefd7d0c",
    "metadata": {},
    "source": [
     "## Test/train split and prepare DataLoaders:"
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d14f1dbb",
+   "id": "76c37d28",
    "metadata": {},
    "source": [
     "## Training initial CNN:"
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5162fc7b",
+   "id": "9a9ea4ad",
    "metadata": {},
    "source": [
     "Let's use nn.Sequential to build an initial NN with two convolutional layers, one hidden layer, and an output layer. To start with, for our two convolution layers, let us choose the number of filters as $32$ and $64$. These layers shall have ReLU activation followed by Max Pooling, where the kernel size is chosen such that the image height and width is halved at this step. After the convolutions are performed, the final output is flattened and passed to a linear layer with ReLU activation followed by dropout with probability $p$. For now let us choose this linear layer to have $16$ units. Later we will experiment with tuning the number of units, filters, and dropout probability to achieve optimal performance. Finally, since this is a binary classification task, we have a single unit output with sigmoid activation yielding $0 \\leq \\hat{y} \\leq 1$, i.e. the probability of class label $y=1$. \n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30615590",
+   "id": "86ccd5ac",
    "metadata": {},
    "source": [
     "Our initial model achieves an accuracy of $97.07\\%$ on our test dataset. Below we will explore tuning the values of the dropout probability $p$, weight_decay (i.e. L2 penalty), and the number of filters and hidden units in our network. First we can take a look at the samples our classified got wrong:"
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "870af7cf",
+   "id": "ba022041",
    "metadata": {},
    "source": [
     "## Studying misclassifications:"
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68ba3148",
+   "id": "5216d5b1",
    "metadata": {},
    "source": [
     "For small lattices, a very sharp transition at $T_c \\approx 2.269$ will not be observed, hence configurations slightly above and below $T_c$ will look similar. As expected, most misclassified samples come from this temperature range $2.1 \\leq T \\leq 2.4$, as shown above. Our classifier correctly classifies all test samples with $2.5 \\leq T \\leq 5$ as belonging to the disordered regime, and all samples with $1.0 \\leq T \\leq 1.9$ as belonging to the ordered phase.\n",
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bb24390",
+   "id": "f530cb80",
    "metadata": {},
    "source": [
     "## Hyperparameter tuning:"
@@ -2170,7 +2170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bca0c5a",
+   "id": "3eb73c4e",
    "metadata": {},
    "source": [
     "For our final model, let's use the hyperparameters which gave the best accuracy on our validation set as shown above. That is: $32$ filters for first Conv2d layer, $64$ filters for second Conv2d layer, $64$ units in hidden layer, $p=0.1$ dropout probability, and weight decay set to $0.001$."
@@ -2284,7 +2284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b289772",
+   "id": "9a2986ef",
    "metadata": {},
    "source": [
     "Our final model achieves an accuracy of $97.4\\%$ on the test set, which is the best out of all the methods we have explored in this project! Here we see the benefit of using convolutional neural network for image classification tasks, and their ability to capture patterns from input images."
@@ -2293,7 +2293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61f92105",
+   "id": "9050bff1",
    "metadata": {},
    "outputs": [],
    "source": []
